--- a/HeeBeejeebies/Makefile
+++ b/HeeBeejeebies/Makefile
@@ -1,6 +1,7 @@
 CC=gcc
+
 all: server client 
-server: server.o 
-deliver: client.o 
+server: server.o message.o message.h
+deliver: client.o message.o message.h
 clean: 
 	rm -f *.o server client
