Added sample client code using multithreading, now it works as one active session. Need to add the different commands.

--- a/HeeBeejeebies/Makefile
+++ b/HeeBeejeebies/Makefile
@@ -1,7 +1,8 @@
 CC=gcc
 LDFLAGS=-pthread
-all: server client 
+all: server client sample_client
 server: server.o message.o message.h
-deliver: client.o message.o message.h
+client: client.o message.o message.h
+sample_client: sample_client.o 
 clean: 
-	rm -f *.o server client
+	rm -f *.o server client sample_client
