started changing our strings to messages but there are now issues with send to all

--- a/HeeBeejeebies/Makefile
+++ b/HeeBeejeebies/Makefile
@@ -1,8 +1,7 @@
 CC=gcc
 LDFLAGS=-pthread
-all: server client sample_client new_server
+all: server sample_client 
 server: server.o message.o message.h
-client: client.o message.o message.h
 sample_client: sample_client.o message.o message.h
 clean: 
-	rm -f *.o server client sample_client 
+	rm -f *.o server sample_client 
